fix whitespace on right side.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -107,16 +107,8 @@ html {
     min-width: 100%;
     min-height: 100%;
 
-    /* fix for white spacing on right side, but breaks dropdowns 
+    /* fix for white spacing on right side */
     overflow-x: hidden;
-    overflow-y: hidden; 
-
-}
-
-body {
-    overflow-x: hidden; 
-    overflow-y: hidden;
-*/
 }
 
 h1 {
